--- a/functions/package.json
+++ b/functions/package.json
@@ -15,7 +15,8 @@
   },
   "devDependencies": {
     "eslint": "^5.12.0",
-    "eslint-plugin-promise": "^4.0.1"
+    "eslint-plugin-promise": "^4.0.1",
+    "firebase-tools": "^6.3.1"
   },
   "private": true
 }
