--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "react": "^16.8.2",
     "react-bootstrap": "^1.0.0-beta.5",
     "react-dom": "^16.8.2",
-    "react-scripts": "2.1.5"
+    "react-scripts": "2.1.5",
+    "use-async-effect": "^2.0.0",
+    "use-immer": "^0.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
