Add picker for lesson date
Also extracts centered layout logic into shared component

--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "private": true,
   "dependencies": {
     "@firebase/app-types": "^0.3.4",
+    "classnames": "^2.2.6",
+    "date-fns": "^2.0.0-alpha.27",
     "escape-quotes": "^1.0.2",
     "firebase": "^5.8.3",
     "loadjs": "^3.5.5",
     "lodash-es": "^4.17.11",
     "react": "^16.8.2",
     "react-bootstrap": "^1.0.0-beta.5",
+    "react-datepicker": "^2.1.0",
     "react-dom": "^16.8.2",
     "react-scripts": "2.1.5",
     "use-async-effect": "^2.0.0",
