--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "formik": "^1.5.1",
     "loadjs": "^3.5.5",
     "lodash-es": "^4.17.11",
+    "object.fromentries": "^2.0.0",
     "react": "^16.8.2",
     "react-bootstrap": "^1.0.0-beta.5",
     "react-datepicker": "^2.1.0",
     "react-dom": "^16.8.2",
     "react-scripts": "2.1.5",
+    "url-parse": "^1.4.4",
     "use-async-effect": "^2.0.0",
     "yup": "^0.26.10"
   },
