--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "escape-quotes": "^1.0.2",
     "firebase": "^5.8.3",
     "formik": "^1.5.1",
+    "i18next": "^15.0.4",
     "loadjs": "^3.5.5",
     "lodash-es": "^4.17.11",
     "object.fromentries": "^2.0.0",
@@ -16,6 +17,7 @@
     "react-bootstrap": "^1.0.0-beta.5",
     "react-datepicker": "^2.1.0",
     "react-dom": "^16.8.2",
+    "react-i18next": "^10.2.0",
     "react-scripts": "2.1.5",
     "url-parse": "^1.4.4",
     "use-async-effect": "^2.0.0",
