--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^16.8.2",
     "react-i18next": "^10.2.0",
     "react-scripts": "2.1.5",
+    "sprintf-js": "^1.1.2",
     "url-parse": "^1.4.4",
     "use-async-effect": "^2.0.0",
     "yup": "^0.26.10"
