--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,8 @@ env:
     - APP_IMAGE_NAME=codenation/code-nation-platform-app
     - FUNCTIONS_IMAGE_NAME=codenation/code-nation-platform-functions
 install:
-  - docker build -t $APP_IMAGE_NAME .
-  - docker build -t $FUNCTIONS_IMAGE_NAME functions
+  - docker build --tag $APP_IMAGE_NAME .
+  - docker build --tag $FUNCTIONS_IMAGE_NAME --file functions/Dockerfile .
 script:
   - docker run --rm -e CI=true $APP_IMAGE_NAME yarn test
 before_deploy:
@@ -21,6 +21,6 @@ deploy:
   on:
     branch: master
     repo: ScriptEdcurriculum/code-nation-platform
-  script: docker run --rm -e FIREBASE_TOKEN $FUNCTIONS_IMAGE_NAME yarn --cwd functions run firebase deploy --force --project $REACT_APP_FIREBASE_PROJECT_ID --public ./build
+  script: docker run --rm -e FIREBASE_TOKEN $FUNCTIONS_IMAGE_NAME -v "$(pwd)/build:/app/build" yarn --cwd functions run firebase deploy --force --project $REACT_APP_FIREBASE_PROJECT_ID --public ./build
   skip_cleanup: true
   provider: script
