--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,18 @@ deploy:
   on:
     branch: master
     repo: ScriptEdcurriculum/code-nation-platform
-  script: docker run --rm -e FIREBASE_TOKEN $FUNCTIONS_IMAGE_NAME -v "$(pwd)/build:/app/build" yarn --cwd functions run firebase deploy --force --project $REACT_APP_FIREBASE_PROJECT_ID --public ./build
+  script: >-
+    docker run
+    --rm
+    -e FIREBASE_TOKEN
+    -v "$(pwd)/build:/app/build"
+    $FUNCTIONS_IMAGE_NAME
+      yarn
+      --cwd functions
+      run
+        firebase deploy
+        --force
+        --project $REACT_APP_FIREBASE_PROJECT_ID
+        --public ./build
   skip_cleanup: true
   provider: script
