--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@bugsnag/js": "^6.0.0",
+    "@bugsnag/plugin-react": "^6.0.0",
     "@firebase/app-types": "^0.3.4",
     "classnames": "^2.2.6",
     "date-fns": "^2.0.0-alpha.27",
